# 3c-code

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  README.md
exec/: CMakeLists.txt
exec/code3c-cli/: CMakeLists.txt
exec/code3c-cli/src/: main.cc
exec/htf-generator/: CMakeLists.txt
exec/htf-generator/src/: main.cc
include/3ccode/: 3ccode.hh
include/code3c/: 3ccode.hh  3ccodelib.hh  bitmat.hh  displaymanager.hh  drawer.hh  hamming13_8_5.hh  hamming743.hh  huffman.hh  pixelmap.hh
libs/: CMakeLists.txt
libs/code3c/: CMakeLists.txt
libs/code3c/include/code3c/: 3ccode.hh  3ccodelib.hh  bitmat.hh  drawer.hh  hamming743.hh  huffman.hh  in3ccode.hh
libs/code3c/src/: 3ccode.cc  bitmat.cc  drawer.cc  hamming743.cc  huffman.cc  in3ccode.cc  pixelmap.c  pixelmap.cc
libs/code3c/src/win32/: Win32Drawer.cc
libs/code3c/src/x11/: X11Drawer.cc
libs/code3c/test/: 3c_drawer.cxx  3c_generation.cxx  hamming.cxx  huffman.cxx  png_in_out.cxx
resources/: .gitignore  code3c.rc  en_EN.htf  exe.rc  fr_FR.htf  htfgen.rc  lib.rc  lib3ccode.rc  training_set.en_EN.txt  training_set.fr_FR.txt  winres.rc
src/: main.cc
src/3ccode/: 3ccode.cc
src/code3c/: 3ccode.cc  bitmat.cc  displaymanager.cc  drawer.cc  hamming13_8_5.cc  hamming743.cc  huffman.cc  pixelmap.c  pixelmap.cc
src/code3c/win32/: Win32Display.cc  Win32Drawer.cc
src/code3c/x11/: X11Display.cc  X11Drawer.cc
test/: 3c_drawer.cxx  hamming.cxx  mat_operation.cxx  png_in_out.cxx  png_reading.cxx  x11_display.cxx
tex/: .gitignore  project_report.tex
